--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
     <div class="product-container">
 
         <div class="pro">
-            <a href="/Toyota/toyota-auris" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Auris1.jpg') }}" ></a>
+            <a href="/Toyota/toyota-auris.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/toyota/Auris1.jpg') }}" ></a>
             <div class="description">
                 <span>SUV</span>
                 <h5>TOYOTA AURIS</h5>
@@ -165,7 +165,7 @@
 
 
         <div class="pro">
-            <a href="/Honda/honda-accord" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/honda/accord1.webp') }}"></a>
+            <a href="/Honda/honda-accord.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/honda/accord1.webp') }}"></a>
             <div class="description">
                 <span>Sedan</span>
                 <h5>HONDA ACCORD TOURER</h5>
@@ -183,7 +183,7 @@
 
 
         <div class="pro">
-            <a href="/Mercedes/A-class" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/mercedes/aclass1.avif') }}"></a>
+            <a href="/Mercedes/A-class.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/mercedes/aclass1.avif') }}"></a>
             <div class="description">
                 <span>Saloon car</span>
                 <h5>MERCEDES A CLASS</h5>
@@ -201,7 +201,7 @@
 
 
         <div class="pro">
-            <a href="/Nissan/nissan-dualis" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/nissan/dualis1.avif') }}"></a>
+            <a href="/Nissan/nissan-dualis.html" target="_blank"><img class="producto" src="{{ url_for('static', filename='images/nissan/dualis1.avif') }}"></a>
             <div class="description">
                 <span>SUV</span>
                 <h5>NISSAN DUALIS</h5>
