--- a/static/css/car-page.css
+++ b/static/css/car-page.css
@@ -154,10 +154,12 @@ img{
     padding: 10px 24px;
     font-size: 16px;
     font-weight: 500;
+    text-decoration: none;
 }
 
 .product-btn .book-now i{
     font-size: 20px;
+    text-decoration: none;
 }
 .product-btn .book-now:hover{
     box-shadow: 0 3px 6px #949494;
