--- a/templates/toyota/toyota-auris.html
+++ b/templates/toyota/toyota-auris.html
@@ -65,22 +65,22 @@
           
   <div class="pick-details">
         <h4>Pickup:
-          <input type="date" id="date">
+          <input type="date" id="date" required>
       </h4>
       <h4>Drop-off:
-        <input type="date" id="date">
+        <input type="date" id="date" required>
     </h4>
   </div>
          
-<div class="product-details">
+  <div class="product-details">
       <h3>Location:Nakuru</h3>
   </div>
 
 
   <div class="product-btn">
-    <div class="book-now">Book Now</div>
+    <div class="book-now" type="submit"><a href="/booking">Book Now</a></div>
     <div class="contact-us"><a href="/contactUs">Contact Us</a></div>
-</div>
+  </div>
      
           </div>
         </div>
