--- a/templates/base.html
+++ b/templates/base.html
@@ -159,7 +159,7 @@
     <div class="right box">
         <div class="topic">Subscribe To Our Newsletter</div>
         <form action="#">
-            <input type="text" placeholder="Enter email address">
+            <input type="text" placeholder="Enter email address" required>
             <input type="submit" name="" value="Send">
         </form>
     </div>
