--- a/templates/honda/honda-prestige.html
+++ b/templates/honda/honda-prestige.html
@@ -62,23 +62,7 @@
     <span class="offer-price">Ksh.10,000/day</span>
 </div>
 
-<div class="pick-details">
-<h4>Pickup:
-<input type="date" id="date">
-</h4>
-<h4>Drop-off:
-<input type="date" id="date">
-</h4>
-</div>
-
-<div class="product-details">
-    <h3>Location:Nakuru</h3>
-</div>
-
-<div class="product-btn">
-  <div class="book-now">Book Now</div>
-  <div class="contact-us"><a href="/contactUs">Contact Us</a></div>
-</div>
+{% include "booking.html" %}
 
 </div>
 </div>
