--- a/static/css/header-footer.css
+++ b/static/css/header-footer.css
@@ -2,8 +2,11 @@
 .flash-message {
   padding: 10px;
   margin-bottom: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
   border-radius: 5px;
   font-weight: bold;
+  text-align: center;
 }
 
 .flash-success {
