--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Admin Login</h2>
+        <h2 style="text-align:center;">ADMIN LOGIN</h2>
         <form action="/adminlogin" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
