--- a/templates/honda/honda-accord.html
+++ b/templates/honda/honda-accord.html
@@ -52,39 +52,21 @@
           <!-- left card section ends here -->
 
 
-          <!-- right card section starts here -->
-          <div class = "product-content">
-            <h2 class = "product-title">HONDA ACCORD TOURER</h2>
+<!-- right card section starts here -->
+<div class = "product-content">
+  <h2 class = "product-title">HONDA ACCORD TOURER</h2>
               
              
-            <div class="product-price">
-              <span class="offer-price">Ksh.10,000/day</span>
-          </div>
-
-          
-  <div class="pick-details">
-        <h4>Pickup:
-          <input type="date" id="date">
-      </h4>
-      <h4>Drop-off:
-        <input type="date" id="date">
-    </h4>
-  </div>
-         
-<div class="product-details">
-      <h3>Location:Nakuru</h3>
+  <div class="product-price">
+    <span class="offer-price">Ksh.10,000/day</span>
   </div>
 
-
-  <div class="product-btn">
-    <div class="book-now">Book Now</div>
-    <div class="contact-us"><a href="/contactUs">Contact Us</a></div>
-</div>
+  {% include "booking.html" %}
      
           </div>
         </div>
-    </div>
-    <!-- right card section ends here -->
+</div>
+<!-- right card section ends here -->
        
     
 <!-- car description section starts here -->
