--- a/templates/mazda/mazda-demio.html
+++ b/templates/mazda/mazda-demio.html
@@ -13,13 +13,8 @@
   </div>
 <!-- intro section ends here -->
 
-
-
-
-
     <div class = "card-wrapper">
         <div class = "card">
-
 
           <!-- left card section starts here -->
           <div class = "product-imgs">
@@ -64,25 +59,9 @@
    
   <div class="product-price">
     <span class="offer-price">Ksh.15,000/day</span>
-</div>
+  </div>
 
-<div class="pick-details">
-<h4>Pickup:
-<input type="date" id="date">
-</h4>
-<h4>Drop-off:
-<input type="date" id="date">
-</h4>
-</div>
-
-<div class="product-details">
-    <h3>Location:Nakuru</h3>
-</div>
-
-<div class="product-btn">
-  <div class="book-now">Book Now</div>
-  <div class="contact-us"><a href="/contactUs">Contact Us</a></div>
-</div>
+{% include "booking.html" %}
 
 </div>
 </div>
