--- a/templates/nissan/nissan-dualis.html
+++ b/templates/nissan/nissan-dualis.html
@@ -60,26 +60,8 @@
             <div class="product-price">
               <span class="offer-price">Ksh.20,000/day</span>
           </div>
-
           
-  <div class="pick-details">
-        <h4>Pickup:
-          <input type="date" id="date">
-      </h4>
-      <h4>Drop-off:
-        <input type="date" id="date">
-    </h4>
-  </div>
-         
-<div class="product-details">
-      <h3>Location:Nakuru</h3>
-  </div>
-
-
-  <div class="product-btn">
-    <div class="book-now">Book Now</div>
-    <div class="contact-us"><a href="/contactUs">Contact Us</a></div>
-</div>
+          {% include "booking.html" %}
      
           </div>
         </div>
