--- a/templates/toyota/toyota-auris.html
+++ b/templates/toyota/toyota-auris.html
@@ -53,7 +53,7 @@
           <!-- left card section ends here -->
 
 
-          <!-- right card section starts here -->
+     <!-- right card section starts here -->
           <div class = "product-content">
             <h2 class = "product-title">TOYOTA AURIS</h2>
               
@@ -62,25 +62,7 @@
               <span class="offer-price">Ksh.7,000/day</span>
           </div>
 
-          
-  <div class="pick-details">
-        <h4>Pickup:
-          <input type="date" id="date" required>
-      </h4>
-      <h4>Drop-off:
-        <input type="date" id="date" required>
-    </h4>
-  </div>
-         
-  <div class="product-details">
-      <h3>Location:Nakuru</h3>
-  </div>
-
-
-  <div class="product-btn">
-    <div class="book-now" type="submit"><a href="/booking">Book Now</a></div>
-    <div class="contact-us"><a href="/contactUs">Contact Us</a></div>
-  </div>
+{% include "booking.html" %}
      
           </div>
         </div>
